$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-13 (opened September 26, 2010)

	* decorana: fixed true eigenvalues which were slightly off (too
	low). Now uses eigengrad() which is more careful in calculations
	(like in centring).  
	
Version 1.18-12 (closed September 26, 2010)

	* swan: no eternal loop with disconnected data where zeros will
	remain in the matrix.

	* ordilabel: gained argument 'col' to set the text colour of the
	labels separately from 'border' (default action is to use 'border'
	colour). 

	* ordiellipse: gained argument 'col'. For draw = "lines" this
	works similarly as previously when 'col' was passed on. For draw =
	"polygon" 'col' sets only the polygon fill, and the text of the
	labels will use the colour of the border or of the foreground.

	* ordiR2step: gained argument 'direction = c("both", "response")',
	and iwth "both" gives also adjusted R2 when dropping terms. I have
	not yet seen a case where a terms is dropped. Abandoned dangerous
	practice of getting the R2.all directly from a fitted model of the
	'scope' since this may have different lhs.

	* anova.ccalist: removed. Revisions were 1273, 1274, 1276. Could
	not make this work consistently with other anova models, except
	with 'model = "direct"'. The function would also chage the API so
	that "..." come as the second argument breaking partial matching
	of other arguments. 
	
Version 1.18-11 (closed September 17, 2010)

	* diversity: example says that rarefy(x, 2) - 1 is the same as
	unbiased Simpson of a true random sample of Hurlbert (1971,
	eq. 5). Added after several wishes to have this function.

	* metaMDS: more verbose about connectivity. Use na.rm = TRUE in
	metaMDSdist(). 

	* FAQ: entry on ade4:cca name clash triggered by an invalid bug
	report #1066 and queries in r-sig-ecology.
	
Version 1.18-10 (closed August 31, 2010)

	* New version opened with the release of vegan_1.17-4 on August
	20, 2010.
